Finished practise project

--- a/Catch the Kenny/Base.lproj/Main.storyboard
+++ b/Catch the Kenny/Base.lproj/Main.storyboard
@@ -1,24 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Catch_the_Kenny" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="9hM-Rw-2Dk">
+                                <rect key="frame" x="20" y="230" width="120" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="6PE-XX-6Gq"/>
+                                    <constraint firstAttribute="height" constant="140" id="Fuo-7z-2vz"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="v6b-XL-uwU">
+                                <rect key="frame" x="146" y="230" width="120" height="140"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="JfU-aq-6Vl">
+                                <rect key="frame" x="274" y="230" width="120" height="140"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="vwM-Ec-he6">
+                                <rect key="frame" x="20" y="378" width="120" height="140"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="IK9-gv-Glg">
+                                <rect key="frame" x="146" y="378" width="120" height="140"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="HNt-1D-bDJ">
+                                <rect key="frame" x="274" y="378" width="120" height="140"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="kmD-wY-g2B">
+                                <rect key="frame" x="19" y="526" width="120" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="MkK-6d-Yv1"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="zOb-7E-iaN">
+                                <rect key="frame" x="145" y="526" width="120" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="RFc-TR-HVT"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenny" translatesAutoresizingMaskIntoConstraints="NO" id="k4A-I4-T6o">
+                                <rect key="frame" x="273" y="526" width="120" height="140"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kyo-oc-RTa">
+                                <rect key="frame" x="19" y="44" width="374" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="eet-IK-VWx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQc-QO-WFX">
+                                <rect key="frame" x="20" y="122" width="374" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="6UJ-yD-rDP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HighScore: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wU4-XM-6wA">
+                                <rect key="frame" x="20" y="718" width="374" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="XDQ-Ju-Tuh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9hM-Rw-2Dk" firstAttribute="trailing" secondItem="vwM-Ec-he6" secondAttribute="trailing" id="0bO-2B-YfI"/>
+                            <constraint firstItem="vwM-Ec-he6" firstAttribute="bottom" secondItem="IK9-gv-Glg" secondAttribute="bottom" id="2aP-p2-7hY"/>
+                            <constraint firstItem="IK9-gv-Glg" firstAttribute="top" secondItem="HNt-1D-bDJ" secondAttribute="top" id="5Ne-kO-4LV"/>
+                            <constraint firstItem="9hM-Rw-2Dk" firstAttribute="top" secondItem="dQc-QO-WFX" secondAttribute="bottom" constant="50" id="5Qi-Ms-1I6"/>
+                            <constraint firstItem="vwM-Ec-he6" firstAttribute="leading" secondItem="wU4-XM-6wA" secondAttribute="leading" id="6dK-8L-NEI"/>
+                            <constraint firstItem="Kyo-oc-RTa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="87l-oO-TBa"/>
+                            <constraint firstItem="vwM-Ec-he6" firstAttribute="top" secondItem="IK9-gv-Glg" secondAttribute="top" id="8rt-bJ-N43"/>
+                            <constraint firstItem="JfU-aq-6Vl" firstAttribute="trailing" secondItem="HNt-1D-bDJ" secondAttribute="trailing" id="Ac3-2b-lNu"/>
+                            <constraint firstItem="kmD-wY-g2B" firstAttribute="top" secondItem="vwM-Ec-he6" secondAttribute="bottom" constant="8" id="AwA-hN-WB4"/>
+                            <constraint firstItem="dQc-QO-WFX" firstAttribute="top" secondItem="Kyo-oc-RTa" secondAttribute="bottom" constant="20" id="B7Q-Wj-54O"/>
+                            <constraint firstItem="zOb-7E-iaN" firstAttribute="leading" secondItem="kmD-wY-g2B" secondAttribute="trailing" constant="6" id="D0r-fJ-kbT"/>
+                            <constraint firstItem="dQc-QO-WFX" firstAttribute="leading" secondItem="9hM-Rw-2Dk" secondAttribute="leading" id="FZa-Gr-xBx"/>
+                            <constraint firstItem="v6b-XL-uwU" firstAttribute="leading" secondItem="IK9-gv-Glg" secondAttribute="leading" id="Fhx-G5-gV7"/>
+                            <constraint firstItem="9hM-Rw-2Dk" firstAttribute="bottom" secondItem="v6b-XL-uwU" secondAttribute="bottom" id="Hja-Qk-uMo"/>
+                            <constraint firstItem="vwM-Ec-he6" firstAttribute="top" secondItem="9hM-Rw-2Dk" secondAttribute="bottom" constant="8" id="Huv-2b-x8V"/>
+                            <constraint firstItem="9hM-Rw-2Dk" firstAttribute="top" secondItem="v6b-XL-uwU" secondAttribute="top" id="JGi-22-5lW"/>
+                            <constraint firstItem="HNt-1D-bDJ" firstAttribute="trailing" secondItem="wU4-XM-6wA" secondAttribute="trailing" id="JmM-SX-GjY"/>
+                            <constraint firstItem="dQc-QO-WFX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="NYc-jm-To2"/>
+                            <constraint firstItem="v6b-XL-uwU" firstAttribute="top" secondItem="JfU-aq-6Vl" secondAttribute="top" id="Rdz-hY-220"/>
+                            <constraint firstItem="dQc-QO-WFX" firstAttribute="trailing" secondItem="JfU-aq-6Vl" secondAttribute="trailing" id="TKO-gE-zAn"/>
+                            <constraint firstItem="dQc-QO-WFX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="W3r-9b-WQO"/>
+                            <constraint firstItem="zOb-7E-iaN" firstAttribute="bottom" secondItem="k4A-I4-T6o" secondAttribute="bottom" id="Xgc-mj-0i8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kyo-oc-RTa" secondAttribute="trailing" constant="21" id="Z0k-ms-eQZ"/>
+                            <constraint firstItem="vwM-Ec-he6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ant-3L-pwx"/>
+                            <constraint firstItem="Kyo-oc-RTa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="19" id="baH-y0-iPz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wU4-XM-6wA" secondAttribute="bottom" constant="86" id="dyA-Gj-omg"/>
+                            <constraint firstItem="9hM-Rw-2Dk" firstAttribute="leading" secondItem="vwM-Ec-he6" secondAttribute="leading" id="eOi-ju-lMQ"/>
+                            <constraint firstItem="JfU-aq-6Vl" firstAttribute="leading" secondItem="HNt-1D-bDJ" secondAttribute="leading" id="fDS-ZB-6lv"/>
+                            <constraint firstItem="k4A-I4-T6o" firstAttribute="leading" secondItem="zOb-7E-iaN" secondAttribute="trailing" constant="8" id="ghj-aQ-iRG"/>
+                            <constraint firstItem="v6b-XL-uwU" firstAttribute="bottom" secondItem="JfU-aq-6Vl" secondAttribute="bottom" id="gty-iF-V2j"/>
+                            <constraint firstItem="Kyo-oc-RTa" firstAttribute="centerX" secondItem="v6b-XL-uwU" secondAttribute="centerX" id="i88-h5-UqL"/>
+                            <constraint firstItem="JfU-aq-6Vl" firstAttribute="leading" secondItem="v6b-XL-uwU" secondAttribute="trailing" constant="8" id="icy-PN-bLZ"/>
+                            <constraint firstItem="wU4-XM-6wA" firstAttribute="top" secondItem="kmD-wY-g2B" secondAttribute="bottom" constant="52" id="irb-PA-1OF"/>
+                            <constraint firstItem="Kyo-oc-RTa" firstAttribute="trailing" secondItem="k4A-I4-T6o" secondAttribute="trailing" id="kQf-mv-ylf"/>
+                            <constraint firstItem="v6b-XL-uwU" firstAttribute="leading" secondItem="9hM-Rw-2Dk" secondAttribute="trailing" constant="6" id="l9G-ZO-oMx"/>
+                            <constraint firstItem="v6b-XL-uwU" firstAttribute="trailing" secondItem="IK9-gv-Glg" secondAttribute="trailing" id="n61-DB-0vp"/>
+                            <constraint firstItem="Kyo-oc-RTa" firstAttribute="leading" secondItem="kmD-wY-g2B" secondAttribute="leading" id="oex-Sm-nCv"/>
+                            <constraint firstItem="zOb-7E-iaN" firstAttribute="top" secondItem="k4A-I4-T6o" secondAttribute="top" id="rr0-H4-MhN"/>
+                            <constraint firstItem="IK9-gv-Glg" firstAttribute="bottom" secondItem="HNt-1D-bDJ" secondAttribute="bottom" id="ruV-Tr-Tih"/>
+                            <constraint firstItem="kmD-wY-g2B" firstAttribute="bottom" secondItem="zOb-7E-iaN" secondAttribute="bottom" id="s5S-yB-4oe"/>
+                            <constraint firstItem="kmD-wY-g2B" firstAttribute="top" secondItem="zOb-7E-iaN" secondAttribute="top" id="vsU-mU-YKy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="highScoreLabel" destination="wU4-XM-6wA" id="Ta1-df-XXe"/>
+                        <outlet property="kenny1" destination="9hM-Rw-2Dk" id="IFS-Pg-mTe"/>
+                        <outlet property="kenny2" destination="v6b-XL-uwU" id="lPL-ge-AYU"/>
+                        <outlet property="kenny3" destination="JfU-aq-6Vl" id="hPR-F4-BX2"/>
+                        <outlet property="kenny4" destination="vwM-Ec-he6" id="crN-3q-Ydz"/>
+                        <outlet property="kenny5" destination="IK9-gv-Glg" id="awh-kd-kdH"/>
+                        <outlet property="kenny6" destination="HNt-1D-bDJ" id="W4y-JA-3gP"/>
+                        <outlet property="kenny7" destination="kmD-wY-g2B" id="Yfl-2Z-QXX"/>
+                        <outlet property="kenny8" destination="zOb-7E-iaN" id="RAq-xZ-Lkp"/>
+                        <outlet property="kenny9" destination="k4A-I4-T6o" id="BDw-Q9-777"/>
+                        <outlet property="scoreLabel" destination="dQc-QO-WFX" id="FiV-7f-8Gf"/>
+                        <outlet property="timeLabel" destination="Kyo-oc-RTa" id="UTn-v9-8Jh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1048" y="-214"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="kenny" width="272" height="366"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
